规范逻辑书写方式